force-app/main/default/objects/Poll_Survey__c/Poll_Survey__c.object-meta.xml
<CustomObject>
    <label>Poll Survey</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Poll Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poll Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>