force-app/main/default/objects/Poll_Survey__c/fields/Bear_Naked_What_would_you_have_eaten__c.field-meta.xml
<CustomField>
    <fullName>Bear_Naked_What_would_you_have_eaten__c</fullName>
    <label>5a.BN: What would you have eaten?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>