force-app/main/default/objects/Poll_Survey__c/fields/Have_you_tried_shakes_yet__c.field-meta.xml
<CustomField>
    <fullName>Have_you_tried_shakes_yet__c</fullName>
    <label>6. Have you tried shakes yet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>