force-app/main/default/objects/Poll_Survey__c/fields/How_many_snacks_did_you_eat_yesterday__c.field-meta.xml
<CustomField>
    <fullName>How_many_snacks_did_you_eat_yesterday__c</fullName>
    <label>3.How many snacks did you eat yesterday?</label>
    <length>2</length>
    <type>Text</type>
</CustomField>