force-app/main/default/objects/Poll_Survey__c/fields/Shake_Would_you_have_eaten_instead__c.field-meta.xml
<CustomField>
    <fullName>Shake_Would_you_have_eaten_instead__c</fullName>
    <label>4a. Shake: Would you have eaten instead</label>
    <length>250</length>
    <type>Text</type>
</CustomField>