force-app/main/default/objects/Poll_Survey__c/fields/Tried_Bear_Naked_Bars_yet__c.field-meta.xml
<CustomField>
    <fullName>Tried_Bear_Naked_Bars_yet__c</fullName>
    <label>5. Tried Bear Naked Bars yet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>