force-app/main/default/objects/Poll_Survey__c/fields/Tried_Kellogg_s_Breakfast_To_Go_Yet__c.field-meta.xml
<CustomField>
    <fullName>Tried_Kellogg_s_Breakfast_To_Go_Yet__c</fullName>
    <label>4. Tried Kellogg&apos;s Breakfast-To-Go Yet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>