force-app/main/default/objects/Poll_Survey__c/fields/When_did_you_have_the_bar__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_have_the_bar__c</fullName>
    <label>7a. When did you have the bar?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early morning / Before breakfast</fullName>
            </value>
            <value>
                <fullName>As my breakfast / Part of breakfast</fullName>
            </value>
            <value>
                <fullName>As a morning snack, before lunch</fullName>
            </value>
            <value>
                <fullName>As my lunch / Part of lunch</fullName>
            </value>
            <value>
                <fullName>As an afternoon snack</fullName>
            </value>
            <value>
                <fullName>As my dinner / Part of dinner</fullName>
            </value>
            <value>
                <fullName>As an evening snack</fullName>
            </value>
            <value>
                <fullName>Late at night</fullName>
            </value>
            <value>
                <fullName>As part of another routine (i.e. workout, studying, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>