force-app/main/default/objects/Poll_Survey__c/fields/Where_did_you_eat_breakfast_today__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_eat_breakfast_today__c</fullName>
    <label>1. Where did you eat breakfast today?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In the cafeteria on-campus</fullName>
            </value>
            <value>
                <fullName>Other on-campus restaurant/coffee shop</fullName>
            </value>
            <value>
                <fullName>Off-campus restaurant/coffee shop</fullName>
            </value>
            <value>
                <fullName>Eaten on my way to class, work or other activity</fullName>
            </value>
            <value>
                <fullName>In class / at work</fullName>
            </value>
            <value>
                <fullName>A catered event</fullName>
            </value>
            <value>
                <fullName>At home</fullName>
            </value>
            <value>
                <fullName>Did not eat breakfast today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>