force-app/main/default/objects/Poll_Survey__c/fields/X2_How_many_items_did_you_eat_for_breakf__c.field-meta.xml
<CustomField>
    <fullName>X2_How_many_items_did_you_eat_for_breakf__c</fullName>
    <label>2. How many items</label>
    <length>2</length>
    <type>Text</type>
</CustomField>