force-app/main/default/objects/Poll_Survey__c/fields/X7_Tried_bars_yet__c.field-meta.xml
<CustomField>
    <fullName>X7_Tried_bars_yet__c</fullName>
    <label>7. Tried bars yet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>