force-app/main/default/objects/Poll_Survey__c/fields/X8a_Shakes_cold_or_room_temp__c.field-meta.xml
<CustomField>
    <fullName>X8a_Shakes_cold_or_room_temp__c</fullName>
    <label>8a. Shakes cold or room temp?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Room temperature</fullName>
            </value>
            <value>
                <fullName>Had some cold and some at room temperature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>